# CLIck-Me2

./: README.md  pyproject.toml
devintro/: __init__.py  cli.py  profile.py
devintro/data/: default_profile.json
tests/: test_cli.py
