[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devintro"
version = "0.1.0"
description = "Developer introduction CLI"
authors = [{name = "Example", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "pyyaml",
]

[project.scripts]
devintro = "devintro.cli:cli"
